Fix off-by-one bug with Find In Page highlights caused by :first-letter

This CL fixes a bug where using Find In Page to search for text in an element
using a :first-letter CSS psuedo element highlights one extra character at the
end of the result text and skips a character at the beginning.

There's still another issue that this CL does not fix that prevents the first
letter itself from becoming highlighted. I am not yet sure what else needs to be
changed to fix this.

Bug: 798004
Change-Id: If1f09dd5485be8f2817e06b3b3ef65f8b1bb11ec